# NetworkVisualizer

./: Cargo.toml  README.md  test.py
src/: main.rs  math.rs  network_manager.rs  packet_manager.rs  ui.rs
src/data/: mod.rs  node_data.rs  packet_data.rs
src/engine/: channel_listener.rs  engine.rs  mod.rs
src/entities/: mod.rs  node.rs  node_graphics.rs  packet.rs  packet_graphics.rs
