[package]
name = "network_vizualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
egui-macroquad = "0.15.0"
etherparse = "0.13.0"
macroquad = "0.4.4"
pcap = "1.1.0"
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["full"] }
